funny table mignon + création site

--- a/mediaqueries.html
+++ b/mediaqueries.html
@@ -11,7 +11,9 @@
         <header>
             <p>Voici header</p>
         </header>
-        <nav>Voici nav</nav>
+        <nav>
+            <p>Voici Header</p>
+        </nav>
         <main>
             <section>Section 1</section>
             <section>Section 2</section>
