--- a/funny_table_minion.html
+++ b/funny_table_minion.html
@@ -25,287 +25,148 @@
             <td colspan="3"></td>
         </tr>
         <tr>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
-            <td colspan=""></td>
+            <td colspan="2"></td>
+            <td colspan="3" class="yellow"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="3" class="yellow"></td>
+            <td colspan="2"></td>            
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="1"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="1"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="1"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="1"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="3" class="yellow"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="gray"></td>
+            <td colspan="3" class="yellow"></td>
+            <td colspan="2"></td> 
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="4" class="yellow"></td>
+            <td colspan="2" class="gray"></td>
+            <td colspan="4" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="10" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="6" class="black"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="10" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="blue"></td>
+            <td colspan="8" class="yellow"></td>
+            <td colspan="1" class="blue"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="yellow"></td>
+            <td colspan="8" class="blue"></td>
+            <td colspan="1" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="6" class="blue"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="6" class="blue"></td>
+            <td colspan="2" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="yellow"></td>
+            <td colspan="8" class="blue"></td>
+            <td colspan="1" class="yellow"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="1"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="8" class="blue"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="1"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="2"></td>
+            <td colspan="1" class="black"></td>
+            <td colspan="8" class="blue"></td>
+            <td colspan="1" class="black"></td>
+            <td colspan="2"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="4"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="2"></td>
+            <td colspan="2" class="black"></td>
+            <td colspan="4"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="3"></td>
+            <td colspan="3" class="black"></td>
+            <td colspan="2"></td>
+            <td colspan="3" class="black"></td>
+            <td colspan="3"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+            <td class="green"></td>
+
         </tr>
     </table>
 </body>
