--- a/initiation_js/cours/exo_js/manege.html
+++ b/initiation_js/cours/exo_js/manege.html
@@ -11,7 +11,8 @@
 
 
 
-    <script src="js/fonction_sans_parametre_sans_retour.js"></script>
+
+    <script type="text/javascript" src="manege.js"></script>
 </body>
 
 </html>
