--- a/initiation_js/cours/exo_js/heure_suivant.html
+++ b/initiation_js/cours/exo_js/heure_suivant.html
@@ -11,7 +11,8 @@
 
 
 
-    <script src="js/fonction_sans_parametre_sans_retour.js"></script>
+
+    <script src="heure_suivant.js"></script>
 </body>
 
 </html>
