--- a/initiation_js/cours/exo_js/manege.html
+++ b/initiation_js/cours/exo_js/manege.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manège</title>
 </head>
 
 <body>
 
 
 
-
-    <script type="text/javascript" src="manege.js"></script>
+    <script type="text/javascript" src="js/manege.js"></script>
 </body>
 
 </html>
